<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">UserForm</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="feedbacktitle">Enter feedback details to send to developers:</string>
	<string name="feedbackname">Put ur name here</string>
	<string name="feedbackemail">Put ur email here</string>
	<string name="feedbacktype">Choose ur feedback type..</string>
	<string name="feedbackbody">Put the body of the message here</string>
	<string name="feedbackresponse">Would you like an email response?</string>
	<string name="feedbackbutton">send feedback</string>
	
	<!--Other string resources also defined in this file… -->  
    <string name="feedbacktype1">Praise</string>  
    <string name="feedbacktype2">Gripe</string>  
    <string name="feedbacktype3">Suggestion</string>  
    <string name="feedbacktype4">Bug</string>  
    
    <string-array name="feedbacktypelist">
        <item>@string/feedbacktype1</item>
        <item>@string/feedbacktype2</item>
        <item>@string/feedbacktype3</item>
        <item>@string/feedbacktype4</item>
    </string-array>
</resources>