<ScrollView 
    xmlns:android="http://schemas.android.com/apk/res/android"  
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ScrollView01"  
    android:layout_width="wrap_content"  
    android:layout_height="wrap_content"  
    android:scrollbars="vertical"
    tools:context=".MainActivity"
     >
<LinearLayout
    android:layout_width="fill_parent"
    android:orientation="vertical"
    android:layout_height="wrap_content"
     >
<TextView
    android:id="@+id/TextViewTitle"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/feedbacktitle"
    android:textSize="10pt"
    />
<EditText
    android:id="@+id/EditTextName"
    android:layout_width="wrap_content"
    android:layout_height="fill_parent"
	android:hint="@string/feedbackname" 
	android:inputType="textPersonName"   
    />
<EditText
    android:id="@+id/EditTextEmail"
    android:layout_width="wrap_content"
    android:layout_height="fill_parent"
	android:hint="@string/feedbackemail" 
	android:inputType="textEmailAddress"   
    />
<Spinner 
    android:id="@+id/SpinnerFeedbackType"
    android:prompt="@string/feedbacktype"
    android:layout_width="wrap_content"
    android:layout_height="fill_parent"
    android:entries="@array/feedbacktypelist"
    />
<EditText
    android:id="@+id/EditTextFeedbackBody"
    android:layout_height="wrap_content" 
    android:layout_width="fill_parent"
    android:hint="@string/feedbackbody"
    android:inputType="textMultiLine"
    android:lines="5" 
    />

<CheckBox
    android:id="@+id/CheckBoxResponse"
    android:layout_height="wrap_content" 
    android:layout_width="fill_parent"
    android:text="@string/feedbackresponse"
    />
<Button
    android:id="@+id/ButtonSendFeedback"  
    android:layout_height="wrap_content"  
    android:text="@string/feedbackbutton"  
    android:onClick="sendFeedback"  
    android:layout_width="fill_parent"
    />
</LinearLayout>
</ScrollView>